# EcoChem

./: .gitignore  Atom_economy_function.py  Notebook.ipynb  README.md  app.py  env.yml  experiment.py  interface.py  interface2.py  pyproject.toml
Report/: Notebook.ipynb
src/ecochem/: DataClasses.py  __init__.py  interface.py
tests/: test_ecochem.py
